--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/psalter-pahlavi/commit/0e201dc
-"><code>0e201dc
+					<a href="https://github.com/notofonts/psalter-pahlavi/commit/67ed600
+"><code>67ed600
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -68,7 +68,15 @@
 				
 				<h4>Noto Sans Psalter Pahlavi</h4>
 				<div class="row align-items-start"><ul>
+<li class="li-0">googlefonts<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansPsalterPahlavi/googlefonts/ttf/NotoSansPsalterPahlavi-Regular.ttf"> NotoSansPsalterPahlavi-Regular.ttf</a></li>
+ </ul>
+ </ul>
 <li class="li-0">full<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansPsalterPahlavi/full/otf/NotoSansPsalterPahlavi-Regular.otf"> NotoSansPsalterPahlavi-Regular.otf</a></li>
+ </ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansPsalterPahlavi/full/ttf/NotoSansPsalterPahlavi-Regular.ttf"> NotoSansPsalterPahlavi-Regular.ttf</a></li>
  </ul>
@@ -79,13 +87,11 @@
  </ul>
  </ul>
 <li class="li-0">unhinted<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansPsalterPahlavi/unhinted/otf/NotoSansPsalterPahlavi-Regular.otf"> NotoSansPsalterPahlavi-Regular.otf</a></li>
+ </ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansPsalterPahlavi/unhinted/ttf/NotoSansPsalterPahlavi-Regular.ttf"> NotoSansPsalterPahlavi-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">googlefonts<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansPsalterPahlavi/googlefonts/ttf/NotoSansPsalterPahlavi-Regular.ttf"> NotoSansPsalterPahlavi-Regular.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
@@ -105,26 +111,34 @@
 
 				<ul>
 										<li>
-						<a href="fontbakery/googlefonts-NotoSansPsalterPahlavi-report.html">FontBakery Report (Google Fonts)</a>
+						<a href="fontbakery/notofonts-NotoSansPsalterPahlavi-googlefonts-report.html">FontBakery Report (Google Fonts)</a>
 					</li>
 									</ul>
 
 				<ul>
 									</ul>
-				
+
 				<h3>Proof sheets</h3>
 				<ul>
 					<li>
-						<a href="proof/glyphs.html">All glyphs</a>
+						Glyphs:
+							<a href="proof/NotoSansPsalterPahlavi/Regular-diffbrowsers_glyphs.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/text.html">Sample text</a>
+						Text:
+							<a href="proof/NotoSansPsalterPahlavi/Regular-diffbrowsers_text.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/waterfall.html">Waterfall test</a>
+						Waterfall:
+							<a href="proof/NotoSansPsalterPahlavi/Regular-diffbrowsers_waterfall.html">Regular</a> 
+					</li>
+					<li>
+						Proofer:
+							<a href="proof/NotoSansPsalterPahlavi/Regular-diffbrowsers_proofer.html">Regular</a> 
 					</li>
 				</ul>
-			</div>
+
+							</div>
 		</div>
 	</body>
 </html>
